Update to Java 17
Updates code to work with Java 17 and newer key file formats.