@@ -3,7 +3,7 @@ package ru.lanwen.jenkins.juseppe.gen.source;
 import org.junit.Test;
 import ru.lanwen.jenkins.juseppe.beans.Plugin;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 
 import static com.google.common.io.Resources.getResource;
@@ -21,7 +21,7 @@ public class PathPluginSourceTest {
     @Test
     public void shouldFindAllPlugins() throws Exception {
         boolean recursiveWatch = false;
-        List<Plugin> plugins = new PathPluginSource(Paths.get(getResource(PLUGINS_DIR_CLASSPATH).getFile()),
+        List<Plugin> plugins = new PathPluginSource(Path.of(getResource(PLUGINS_DIR_CLASSPATH).getFile()),
                                                     recursiveWatch)
                 .plugins();
 
@@ -33,7 +33,7 @@ public class PathPluginSourceTest {
     @Test
     public void shouldFindAllPluginsRecursively() throws Exception {
         boolean recursiveWatch = true;
-        List<Plugin> plugins = new PathPluginSource(Paths.get(getResource(PLUGINS_DIR_CLASSPATH).getFile()),
+        List<Plugin> plugins = new PathPluginSource(Path.of(getResource(PLUGINS_DIR_CLASSPATH).getFile()),
                                                     recursiveWatch)
                  .plugins();
 
